--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,11 @@ spring.datasource.url=jdbc:derby://localhost:1527/sampleDB
 spring.datasource.username=sample
 spring.datasource.password=sample
 
+# DDL mode. This is actually a shortcut for the "hibernate.hbm2ddl.auto" property.
+# Defaults to "create-drop" when using an embedded database and no schema manager was detected.
+# Otherwise, defaults to "none".
+spring.jpa.hibernate.ddl-auto=none
+
 # Hibernate additional native properties to set on the JPA provider.
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DerbyTenSevenDialect
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
