--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# 아래 datasource url이 없으면 derby embedded로 사용된다.
+# If you don't have a data source URL, use the built-in data source derby.
 # https://docs.spring.io/spring-boot/docs/current/reference/html/howto-database-initialization.html
 spring.datasource.platform=derby
 spring.datasource.url=jdbc:derby://localhost:1527/sampleDB
